<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_common</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the ROBOTIS HUMANOID_ROBOT (meta package).
    This meta package provides launch files and plug-in for Gazebo and RViz.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_robot_description</build_depend>
  <build_depend>humanoid_robot_gazebo</build_depend>

  <build_export_depend>humanoid_robot_description</build_export_depend>
  <build_export_depend>humanoid_robot_gazebo</build_export_depend>

  <exec_depend>humanoid_robot_description</exec_depend>
  <exec_depend>humanoid_robot_gazebo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
