<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_gazebo</name>
  <version>0.3.0</version>
  <description>
    The humanoid_robot_gazebo package
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


</package>
