<?xml version="1.0"?>
<package>
  <name>humanoid_robot_gui_demo</name>
  <version>0.3.0</version>
  <description>
     humanoid_robot_gui_demo
  </description>
  <license>Apache License 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>humanoid_robot_controller_msgs</build_depend>
  <build_depend>humanoid_robot_walking_module_msgs</build_depend>
  <build_depend>humanoid_robot_online_walking_module_msgs</build_depend>
  <build_depend>humanoid_nav_msgs</build_depend>

  <!-- <build_export_depend>rqt_gui</build_export_depend> -->
  <!-- <build_export_depend>rqt_gui_cpp</build_export_depend> -->
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>roslib</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <build_export_depend>sensor_msgs</build_export_depend> -->
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  <!-- <build_export_depend>visualization_msgs</build_export_depend> -->
  <!-- <build_export_depend>interactive_markers</build_export_depend> -->
  <!-- <build_export_depend>cmake_modules</build_export_depend> -->
  <!-- <build_export_depend>eigen_conversions</build_export_depend> -->
  <!-- <build_export_depend>humanoid_robot_controller_msgs</build_export_depend> -->
  <!-- <build_export_depend>humanoid_robot_walking_module_msgs</build_export_depend> -->
  <!-- <build_export_depend>humanoid_robot_online_walking_module_msgs</build_export_depend> -->
  <!-- <build_export_depend>humanoid_nav_msgs</build_export_depend> -->

  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>humanoid_robot_controller_msgs</run_depend>
  <run_depend>humanoid_robot_walking_module_msgs</run_depend>
  <run_depend>humanoid_robot_online_walking_module_msgs</run_depend>
  <run_depend>humanoid_nav_msgs</run_depend>


</package>
