<?xml version="1.0"?>
<package format="3">
  <name>humanoid_robot_navigation</name>
  <version>0.3.0</version>
  <description>
    This package is for generating footsteps of ROBOTIS-HUMANOID_ROBOT.
    It has several config files and launch files in order to use footstep planner package. 
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>map_server</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>footstep_planner</build_depend>

  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>octomap_server</build_export_depend>
  <build_export_depend>footstep_planner</build_export_depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>footstep_planner</exec_depend>

</package>
