<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_offset_tuner_server</name>
  <version>0.3.0</version>
  <description>
    The offset_tuner_server package
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_robot_offset_tuner_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>humanoid_robot_controller</build_depend>
  <build_depend>humanoid_robot_base_module</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_offset_tuner_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>humanoid_robot_controller</build_export_depend>
  <build_export_depend>humanoid_robot_base_module</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>humanoid_robot_offset_tuner_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>humanoid_robot_controller</exec_depend>
  <exec_depend>humanoid_robot_base_module</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

</package>
