<?xml version="1.0"?>
<package format="3">
  <name>humanoid_robot_tools</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the humanoid_robot_tools (meta package)
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>


  <condition if="$ROS_VERSION == 1">
    <build_depend>humanoid_robot_action_editor</build_depend>
    <build_depend>humanoid_robot_camera_setting_tool</build_depend>
    <build_depend>humanoid_robot_gui_demo</build_depend>
    <build_depend>humanoid_robot_navigation</build_depend>
    <build_depend>humanoid_robot_offset_tuner_client</build_depend>
    <build_depend>humanoid_robot_offset_tuner_server</build_depend>
    <build_depend>humanoid_robot_web_setting_tool</build_depend>

    <build_export_depend>humanoid_robot_action_editor</build_export_depend>
    <build_export_depend>humanoid_robot_camera_setting_tool</build_export_depend>
    <build_export_depend>humanoid_robot_gui_demo</build_export_depend>
    <build_export_depend>humanoid_robot_navigation</build_export_depend>
    <build_export_depend>humanoid_robot_offset_tuner_client</build_export_depend>
    <build_export_depend>humanoid_robot_offset_tuner_server</build_export_depend>
    <build_export_depend>humanoid_robot_web_setting_tool</build_export_depend>

    <exec_depend>humanoid_robot_action_editor</exec_depend>
    <exec_depend>humanoid_robot_camera_setting_tool</exec_depend>
    <exec_depend>humanoid_robot_gui_demo</exec_depend>
    <exec_depend>humanoid_robot_navigation</exec_depend>
    <exec_depend>humanoid_robot_offset_tuner_client</exec_depend>
    <exec_depend>humanoid_robot_offset_tuner_server</exec_depend>
    <exec_depend>humanoid_robot_web_setting_tool</exec_depend>
  </condition>


  <condition if="$ROS_VERSION == 2">
    <build_depend>humanoid_robot_action_editor</build_depend>
    <build_depend>humanoid_robot_camera_setting_tool</build_depend>
    <build_depend>humanoid_robot_gui_demo</build_depend>
    <build_depend>humanoid_robot_navigation</build_depend>
    <build_depend>humanoid_robot_offset_tuner_client</build_depend>
    <build_depend>humanoid_robot_offset_tuner_server</build_depend>
    <build_depend>humanoid_robot_web_setting_tool</build_depend>

    <build_export_depend>humanoid_robot_action_editor</build_export_depend>
    <build_export_depend>humanoid_robot_camera_setting_tool</build_export_depend>
    <build_export_depend>humanoid_robot_gui_demo</build_export_depend>
    <build_export_depend>humanoid_robot_navigation</build_export_depend>
    <build_export_depend>humanoid_robot_offset_tuner_client</build_export_depend>
    <build_export_depend>humanoid_robot_offset_tuner_server</build_export_depend>
    <build_export_depend>humanoid_robot_web_setting_tool</build_export_depend>

    <exec_depend>humanoid_robot_action_editor</exec_depend>
    <exec_depend>humanoid_robot_camera_setting_tool</exec_depend>
    <exec_depend>humanoid_robot_gui_demo</exec_depend>
    <exec_depend>humanoid_robot_navigation</exec_depend>
    <exec_depend>humanoid_robot_offset_tuner_client</exec_depend>
    <exec_depend>humanoid_robot_offset_tuner_server</exec_depend>
    <exec_depend>humanoid_robot_web_setting_tool</exec_depend>
  </condition>


  <export>
    <metapackage />
  </export>
</package>
