<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_tuner_client</name>
  <version>0.3.0</version>
  <description>
     humanoid_robot_tuner_client
  </description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/humanoid_robot_tuner_client</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_robot_tuning_module_msgs</build_depend>

  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_cpp</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_tuning_module_msgs</build_export_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>humanoid_robot_tuning_module_msgs</exec_depend>

</package>
