<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_web_setting_tool</name>
  <version>0.3.0</version>
  <description>
    The humanoid_robot_web_setting_tool package
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/humanoid_robot_web_setting_tool</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_depend>web_video_server</build_depend>

  <build_export_depend>rosbridge_server</build_export_depend>
  <build_export_depend>web_video_server</build_export_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>


</package>
