<?xml version="1.0"?>
<package format="2">
  <name>op3_action_editor</name>
  <version>0.3.0</version>
  <description>
    The op3_action_editor package porovides editor tool to make motion.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <url type="website">http://wiki.ros.org/op3_action_editor</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>op3_action_module</build_depend>
  <build_depend>op3_base_module</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>op3_manager</build_depend>
  <build_depend>ros_mpg321_player</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>robotis_controller</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>
  <build_export_depend>op3_action_module</build_export_depend>
  <build_export_depend>op3_base_module</build_export_depend>
  <build_export_depend>libncurses-dev</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>op3_manager</build_export_depend>
  <build_export_depend>ros_mpg321_player</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>robotis_controller</exec_depend>
  <exec_depend>robotis_device</exec_depend>
  <exec_depend>op3_action_module</exec_depend>
  <exec_depend>op3_base_module</exec_depend>
  <exec_depend>libncurses-dev</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>op3_manager</exec_depend>
  <exec_depend>ros_mpg321_player</exec_depend>

</package>
